[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/RockSalt-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/DynamicFonts/orbitron.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Esc_UI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="root" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.12549, 0.12549, 0.996078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 547.0
margin_top = 251.0
margin_right = 732.0
margin_bottom = 468.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 185.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Spacing" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 185.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 25 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 134.0
margin_right = 185.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 185.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 2 )
text = "Back to main menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 185.0
margin_bottom = 217.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="SFX" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
